# FPL

./: .env.example  README.md  pyproject.toml
android-app/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/fplnotifier/: DeadlineScheduler.kt  DeadlineWorker.kt  FplApiRepository.kt  FplNotifierApplication.kt  MainActivity.kt  MainViewModel.kt  NotificationHelper.kt  ReminderRepository.kt  SettingsRepository.kt  (+1 more)
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/values-night/: themes.xml
docs/: exam-task-platform.md
ios-app/: README.md
ios-app/FplNotifier/: Info.plist
ios-app/FplNotifier.xcodeproj/: project.pbxproj
ios-app/FplNotifier/Data/: FplApiRepository.swift  GameweekDeadline.swift  ReminderStore.swift  SettingsStore.swift
ios-app/FplNotifier/Scheduling/: DeadlineScheduler.swift  NotificationHelper.swift
ios-app/FplNotifier/ViewModels/: MainViewModel.swift
ios-app/FplNotifier/Views/: ContentView.swift  FplNotifierApp.swift
ios-app/Tests/FplNotifierTests/: GameweekDeadlineTests.swift  Info.plist
ios-app/Tests/FplNotifierTests/Fixtures/: bootstrap.json
src/fpl_notifier/: __init__.py  __main__.py  deadlines.py  notifier.py  service.py
tests/: test_deadlines.py  test_exam_task_catalog.py  test_notifier.py  test_service.py
web/: app.js  index.html  styles.css
web/data/: tasks.json
(+1 files in other folders)
